--- a/project/helm/techtrends/templates/deploy.yaml
+++ b/project/helm/techtrends/templates/deploy.yaml
@@ -22,11 +22,11 @@ spec:
           livenessProbe:
             httpGet:
               path: {{ .Values.livenessProbe.path }}
-              port: {{ .Values.containerPort }}
+              port: {{ .Values.livenessPort }}
           readinessProbe:
             httpGet:
               path: {{ .Values.readinessProbe.path }}
-              port: {{ .Values.containerPort }}
+              port: {{ .Values.readinessPort }}
           resources:
             requests:
               memory: {{ .Values.resources.requests.memory }}
